<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_pt"
            android:text="@string/plaintext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorUltraMarine"
            android:textColor="@color/colorWhite"
            android:gravity="center|left"
            android:padding="5sp"
            android:paddingLeft="2sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50dp"/>

        <EditText
            android:id="@+id/et_pt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tv_title_ct"
            android:text="@string/ciphertext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorUltraMarine"
            android:textColor="@color/colorWhite"
            android:gravity="center|left"
            android:padding="5sp"
            android:paddingLeft="2sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50dp"/>

        <EditText
            android:id="@+id/et_ct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_enc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/encrypt"/>
            <Button
                android:id="@+id/btn_dec"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/decrypt"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_msg"
            android:text="@string/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorUltraMarine"
            android:textColor="@color/colorWhite"
            android:gravity="center|left"
            android:padding="5sp"
            android:paddingLeft="2sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50dp"/>

        <EditText
            android:id="@+id/et_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tv_title_hash"
            android:text="@string/hash"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorUltraMarine"
            android:textColor="@color/colorWhite"
            android:gravity="center|left"
            android:padding="5sp"
            android:paddingLeft="2sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50dp"/>

        <EditText
            android:id="@+id/et_hash"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_rng"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rng"/>
            <Button
                android:id="@+id/btn_hash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hash"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_status"
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorUltraMarine"
            android:textColor="@color/colorWhite"
            android:gravity="center|left"
            android:padding="5sp"
            android:paddingLeft="2sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="50dp"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.37"
            android:text="Welcome!"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>